<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/north_indian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/filter_north_indian"
                android:paddingHorizontal="24dp"
                android:paddingVertical="12dp"
                android:text="@string/filter_north_indian"
                android:textColor="@color/brand_colour"
                android:textSize="18sp" />


            <Button
                android:id="@+id/non_veg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/filter_red"
                android:paddingHorizontal="24dp"
                android:paddingVertical="12dp"
                android:text="@string/filter_red"
                android:textColor="@color/brand_colour"
                android:textSize="18sp" />

            <Button
                android:id="@+id/veg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/filter_green"
                android:paddingHorizontal="24dp"
                android:paddingVertical="12dp"
                android:text="@string/filter_green"
                android:textColor="@color/brand_colour"
                android:textSize="18sp" />

            <Button
                android:id="@+id/budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/filter_yellow"
                android:paddingHorizontal="24dp"
                android:paddingVertical="12dp"
                android:text="@string/filter_yellow"
                android:textColor="@color/brand_colour"
                android:textSize="18sp" />

            <Button
                android:id="@+id/deluxe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/filter_orange"
                android:paddingHorizontal="24dp"
                android:paddingVertical="12dp"
                android:text="@string/filter_orange"
                android:textColor="@color/brand_colour"
                android:textSize="18sp" />

            <Button
                android:id="@+id/healthy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/filter_healthy"
                android:paddingHorizontal="24dp"
                android:paddingVertical="12dp"
                android:text="@string/filter_healthy"
                android:textColor="@color/brand_colour"
                android:textSize="18sp" />


        </LinearLayout>
    </HorizontalScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="5dp"
        android:background="@color/brand_colour"
        >
    </View>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/meals_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


</LinearLayout>